force-app/main/default/objects/phsCoachCheckIn__c/phsCoachCheckIn__c.object-meta.xml
<CustomObject>
    <label>phsCoachCheckIn</label>
    <nameField>
        <label>phsCoachCheckIn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCoachCheckIns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>