force-app/main/default/objects/phsCoachCheckIn__c/fields/Checkin_required__c.field-meta.xml
<CustomField>
    <fullName>Checkin_required__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This field, when checked, will trigger checkin question in coach.</inlineHelpText>
    <label>Checkin required</label>
    <type>Checkbox</type>
</CustomField>