force-app/main/default/objects/phsCoachCheckIn__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>phsCoachCheckIns</relationshipLabel>
    <relationshipName>phsCoachCheckIns1</relationshipName>
    <type>Lookup</type>
</CustomField>