force-app/main/default/objects/phsCoachCheckIn__c/fields/Last_checkin_date__c.field-meta.xml
<CustomField>
    <fullName>Last_checkin_date__c</fullName>
    <label>Last checkin date</label>
    <type>DateTime</type>
</CustomField>